# ScrewGeometry

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: game.cpp  game.h  main.cpp  window.cpp  window.h
src/components/: icomponent.h  model.cpp  model.h  player_controller.cpp  player_controller.h  portal_camera_controller.cpp  portal_camera_controller.h  transform.cpp  transform.h
src/game_objects/: camera.cpp  camera.h  drawable_game_object.cpp  drawable_game_object.h  game_object.cpp  game_object.hpp  portal.cpp  portal.h
src/levels/: level.cpp  level.h  level1.cpp  level1.h  level2.cpp  level2.h
src/renderer/: buffer.h  buffer_entry.cpp  buffer_entry.h  buffer_layout.cpp  buffer_layout.h  framebuffer.cpp  framebuffer.h  icamera.h  index_buffer.cpp  index_buffer.h  renderbuffer.cpp  renderbuffer.h  single_color_texture.cpp  single_color_texture.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/shaders/: default.frag  default.vert  portal.frag  shader.cpp  shader.h  shader_program.cpp  shader_program.h
